[build-system]
requires = ["flit_core >=2,<4", "yfinance", "tqdm", "numpy", "pandas", "plotly" ]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "stock_treemap"
authors = ["John M. Shea <jshea@ieee.org>"]
homepage = "https://github.com/jmshea/stock_treemap"
repository = "https://github.com/jmshea/stock_treemap"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
keywords = [ "stock", "treemap", "portfolio", "visualization", "investment"]

